--- a/package.json
+++ b/package.json
@@ -9,16 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.4",
+    "axios": "^1.7.2",
+    "cheerio": "^1.0.0-rc.12",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.6",
+    "mongoose": "^8.4.0",
+    "next": "14.2.3",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-responsive-carousel": "^3.2.23",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/nodemailer": "^6.4.15",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
