--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.2.10",
+    "@clerk/nextjs": "^5.2.8",
     "@headlessui/react": "^2.0.4",
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.1",
+    "convex": "^1.13.2",
     "framer-motion": "^11.2.6",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
@@ -21,6 +24,8 @@
     "react-dom": "^18",
     "react-responsive-carousel": "^3.2.23",
     "supports-color": "^8.1.1",
+    "svix": "^1.25.0",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
