--- a/package.json
+++ b/package.json
@@ -11,22 +11,30 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.2.10",
     "@clerk/nextjs": "^5.2.8",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@headlessui/react": "^2.0.4",
+    "@mui/material": "^5.16.6",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.1",
     "convex": "^1.13.2",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.2.6",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
+    "react-share": "^5.1.0",
     "supports-color": "^8.1.1",
     "svix": "^1.25.0",
     "swr": "^2.2.5",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
